--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,8 +15,12 @@
             "error",
             "LabeledStatement",
             "WithStatement"
-          ] ,
+          ],
           "no-plusplus": "off",
-          "no-param-reassign": "off"
+          "no-param-reassign": "off",
+          "no-undef": "off",
+          "no-unused-vars": "off",
+          "no-loop-func": "off",
+          "no-inner-declarations": "off"
     }
 }
