--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "redsoft",
   "version": "1.0.0",
   "description": "",
-  "main": "webpack.config.js",
+  "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development",
     "build": "webpack --mode production",
@@ -31,7 +31,6 @@
     "file-loader": "^6.2.0",
     "html-loader": "^1.0.0",
     "html-webpack-plugin": "^4.0.3",
-    "jsdoc": "^3.6.3",
     "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^0.9.0",
     "sass": "^1.27.0",
@@ -43,8 +42,6 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.4",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.5.1",
     "jsdom": "^16.4.0",
     "node-sass": "^4.14.1",
     "style-loader": "^2.0.0"
